Fix: GitHub footer icon not centered
Reason:
* GitHub footer icon was not vertically centered

Effects:
* Center GitHub icon inside footer.
* Increase the icons size.

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,12 +9,14 @@ footer {
     padding: 10px;
 
     /* icon */
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     text-align: center;
 }
 
 footer svg {
     color: var(--main-light-color);
+    display: block;
+    margin: auto;
 }
 
 footer svg:hover {
